rpi/resources/pg1.stackgres.resource.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: resources
