rpi/resources/go.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
  namespace: rpi
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: blog-ingress.phantombyte.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: phantom-blog-svc
                port:
                  number: 80
